--- a/Seapal_html/site/app_waypoint.html
+++ b/Seapal_html/site/app_waypoint.html
@@ -107,6 +107,90 @@
 		            		</div>
 		            	</div>      	 
 	            	</div>
+	            	</form>
+	            	<h2>Weather</h2>
+
+	            	<form> 
+		            	<div>
+		            		<div>
+			            		<div>
+			            			<label>Wind strength</label>
+									<select name="windStrength">
+									     <option value="0" selected="selected">0</option>
+									     <option value="1">1</option>
+									     <option value="2">2</option>
+									     <option value="3">3</option>
+									     <option value="4">4</option>
+									     <option value="5">5</option>
+									     <option value="6">6</option>
+									     <option value="7">7</option>
+									     <option value="8">8</option>
+									     <option value="9">9</option>
+									     <option value="10">10</option>
+									     <option value="11">11</option>
+									     <option value="12">12</option>
+									</select>
+								</div>
+			            		<div>
+			            			<label>Wind direction</label>
+									<input type="number" name="windDirection" pattern="\d[\d][\d]" min="0" max="359" value="0"/>
+								</div>
+			            		<div>
+			            			<label>Air pressure (mBar)</label>
+									<input type="number" name="airPressure" pattern="\d\d\d[\d]" min="500" max="2000" value="1000"/>
+								</div>
+			            		<div>
+			            			<label>Cloudiness level</label>
+									<select name="cloudiness">
+									     <option value="0" selected="selected">0</option>
+									     <option value="1">1</option>
+									     <option value="2">2</option>
+									     <option value="3">3</option>
+									     <option value="4">4</option>
+									     <option value="5">5</option>
+									     <option value="6">6</option>
+									     <option value="7">7</option>
+									     <!--option value="8">8</option>
+									     <option value="9">9</option>
+									     <option value="10">10</option>
+									     <option value="11">11</option>
+									     <option value="12">12</option-->
+									</select>
+								</div>
+			            		<div>
+			            			<label>Raininess level</label>
+									<select name="raininess">
+									     <option value="0" selected="selected">0</option>
+									     <option value="1">1</option>
+									     <option value="2">2</option>
+									     <option value="3">3</option>
+									     <option value="4">4</option>
+									     <option value="5">5</option>
+									     <option value="6">6</option>
+									     <option value="7">7</option>
+									     <!--option value="8">8</option>
+									     <option value="9">9</option>
+									     <option value="10">10</option>
+									     <option value="11">11</option>
+									     <option value="12">12</option-->
+									</select>
+								</div>
+			            		<div>
+			            			<label>wave height</label>
+									<input type="text" name="waveHeight"/>
+								</div>
+			            		<div>
+			            			<label>wave direction</label>
+									<input type="number" name="waveDirection" pattern="\d[\d][\d]" min="0" max="359" value="0"/>
+								</div>
+			            		<div>
+			            			<label>date of recognition</label>
+									<input type="datetime" name="date"/>
+								</div>
+			            	</div>
+		            	</div>
+		            	<input type="submit"/>
+	            	</form>
 	            </div>
 			    <br />
 			    <br />
