--- a/Seapal_html/site/app_waypoint.html
+++ b/Seapal_html/site/app_waypoint.html
@@ -11,7 +11,8 @@
 		<meta name='description' content='SeaPal is a mobile app for sailors to do navigation, tracking and more.'/>
 		<meta name="author" content="Prof. Dr. Marko Boger, Dominic Eschbach und Timo Partl">
 		<title>Seapal</title>
-	  	
+		<link rel='stylesheet' href='file:///Users/mogli/Code/webtec/Seapal_html/site/stylesheet.css' />
+
   	</head>
 	<body>
 		
