made some css changes

--- a/Seapal_html/site/app_waypoint.html
+++ b/Seapal_html/site/app_waypoint.html
@@ -11,7 +11,7 @@
 		<meta name='description' content='SeaPal is a mobile app for sailors to do navigation, tracking and more.'/>
 		<meta name="author" content="Prof. Dr. Marko Boger, Dominic Eschbach und Timo Partl">
 		<title>Seapal</title>
-		<link rel='stylesheet' href='file:///Users/mogli/Code/webtec/Seapal_html/site/stylesheet.css' />
+		<link rel='stylesheet' href='./stylesheet.css' />
 
   	</head>
 	<body>
@@ -19,12 +19,12 @@
 		<!-- Navigation -->
 		<div>
 			<div>
-				<div>
+				<div class="navbar">
 					<a href="index.html">
 						<img src='../img/icons/seapal_normal.png' alt='Icon-Small-50' width='50' height='50' />
 						<h2>Seapal</h2>
 					</a>
-					<div>
+					<div class="navigation-points">
 						<ul>
 							<li><a href='index.html'>Home</a></li>
 							<li><a href='app_waypoint.html'>App</a></li>
