--- a/Seapal_html/site/app_waypoint.html
+++ b/Seapal_html/site/app_waypoint.html
@@ -15,8 +15,24 @@
     <script src="./js/bootstrap.js"></script>
     <script src="./js/bootstrap-datepicker.js"></script>
     <script>
-	$('.datepicker').datepicker();
+	   $('.datepicker').datepicker();
     </script>
+    <style type="text/css">
+      #logo {
+        border-radius: 3px 3px 3px 3px;
+        -moz-border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px 3px 3px 3px;
+        border: 0px solid #000000;
+        -webkit-box-shadow: 0px 0px 15px -2px rgba(0,0,0,1);
+        -moz-box-shadow: 0px 0px 15px -2px rgba(0,0,0,1);
+        box-shadow: 0px 0px 15px -2px rgba(0,0,0,1);
+        margin-right: 14px;
+        margin-left: 14px;
+      }
+      li {
+        margin-top: 15px;
+      }
+    </style>
   </head>
   <body>
     <!-- Navigation -->
@@ -24,7 +40,7 @@
       <div class="navbar">
         <div class="navbar-inner">
           <a href="index.html" class="brand">
-          <img src='../img/icons/seapal_normal.png' alt='Icon-Small-50' width='20' height='20'/>
+          <img src='../img/icons/seapal_normal.png' alt='Icon-Small-50' id="logo"/>
           Seapal
           </a>
           <div class="navigation-points">
