--- a/html/site/nav_validator_test.html
+++ b/html/site/nav_validator_test.html
@@ -16,19 +16,17 @@
          <span></span>
         <script>
             $("form").submit(function() {
+                var re = /\b\d\d°\d\d\.\d\d'[N|S|W|O][\d]{1,3}°\d\d\.\d\d'[N|S|W|O]\b/i;
+                var result = re.test($("input:first").val());
 
-                var re = new RegExp("\b\d\d°\d\d\.\d\d'[N|S|W|O][\d]{1,3}°\d\d\.\d\d'[N|S|W|O]\b", "i");
-                re.exec($("input:first").val());
-
-
-                if (re != true) {
-                    $("span").text("Not valid!").show();
+                if (result) {
+                    $("span").text("Verfied!").show();
                 } else {
-                    $("span").text("Verfied!").show().fadeOut(1000);
-                
+                    $("span").text("Not valid!").show();
                 }
                 return false;
             });
+
         </script>
     </body>
 </html>
